--- a/courses/courses.css
+++ b/courses/courses.css
@@ -47,7 +47,7 @@ body {
     color: #1544c0;
     font-family: GingerBold;
     font-weight: 100;
-    font-size: 6.5vw;
+    font-size: 8vw;
     margin-top: 0;
     margin-bottom: 1.5rem;
 
@@ -59,6 +59,7 @@ body {
     font-size: 0.7rem;
     font-weight: 100;
     margin-bottom: 1rem;
+    text-transform: uppercase;
 
 }
 
@@ -89,7 +90,7 @@ body {
 .inner {
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
 
 }
 
@@ -185,7 +186,7 @@ button:hover {
         color: #1544c0;
         font-family: GingerBold;
         font-weight: 100;
-        font-size: 6.5vw;
+        font-size: 5vw;
         margin-top: 0;
         margin-bottom: 1.5rem;
     
@@ -256,7 +257,7 @@ button:hover {
 
     .other-container {
 
-        padding-top: 17%;
+        padding-top: 14%;
         padding-left: 6%;
         width: 50%;
 
